--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,24 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
-
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.container {
+  width: 300px;
+  height: 30px;
+  padding-top: 20px;
+  padding-left: 20px;
+}
+.timer {
+  display: flex;
+  align-items: start;
+  width: 150px;
+  gap: 15px;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.value {
+  font-size: 27px;
+  padding-top: 20px;
+}
+.label {
+  font-size: 10px;
 }
