--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,3 +22,12 @@
 .label {
   font-size: 10px;
 }
+
+/* 2-snackbar */
+
+.form {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
